Ajout route plus corrections de bugs
